--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@emotion/react": "^11.10.6",
-		"@emotion/styled": "^11.10.6",
-		"@mui/material": "^5.11.16",
+		"@emotion/react": "^11.11.1",
+		"@emotion/styled": "^11.11.0",
+		"@mui/material": "^5.13.4",
 		"@reduxjs/toolkit": "^1.9.2",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
@@ -13,6 +13,7 @@
 		"bootstrap": "^5.3.0-alpha1",
 		"bootstrap-icons": "^1.10.3",
 		"react": "^18.2.0",
+		"react-awesome-reveal": "^4.2.4",
 		"react-dom": "^18.2.0",
 		"react-redux": "^8.0.5",
 		"react-scripts": "5.0.1",
